--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           PATTERNS: |
             dockerfiles/${{ matrix.docker }}
-            .github/workflows/build.yml
+            dockerfiles/base/Dockerfile.common
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -54,7 +54,6 @@ jobs:
           - obsidian
           - octave
           - blender
-          - ml
     needs: [base]
     steps:
       - uses: actions/checkout@v3
@@ -62,7 +61,7 @@ jobs:
         with:
           PATTERNS: |
             dockerfiles/${{ matrix.context }}/Dockerfile
-            .github/workflows/build.yml
+            dockerfiles/base/*
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -76,3 +75,33 @@ jobs:
           file: dockerfiles/${{ matrix.context }}/Dockerfile
           tags: xundaoxd/${{ matrix.context }}:latest
           push: true
+  
+  # build1:
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       context:
+  #         - ml
+  #         - vscode
+  #   needs: [build]
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: technote-space/get-diff-action@v6
+  #       with:
+  #         PATTERNS: |
+  #           dockerfiles/${{ matrix.context }}/Dockerfile
+  #           dockerfiles/base/*
+  #           dockerfiles/development/Dockerfile
+  #     - uses: docker/setup-qemu-action@v1
+  #     - uses: docker/setup-buildx-action@v1
+  #     - uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_TOKEN }}
+  #     - uses: docker/build-push-action@v2
+  #       if: ${{ env.GIT_DIFF  }}
+  #       with:
+  #         context: .
+  #         file: dockerfiles/${{ matrix.context }}/Dockerfile
+  #         tags: xundaoxd/${{ matrix.context }}:latest
+  #         push: true
