--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - dev
+      - force_run
 
 jobs:
   base:
@@ -32,7 +33,7 @@ jobs:
       - run: |
           cat dockerfiles/base/Dockerfile.common >> dockerfiles/${{ matrix.docker }}
       - uses: docker/build-push-action@v2
-        if: ${{ env.GIT_DIFF  }}
+        if: ${{ env.GIT_DIFF || github.ref == 'refs/heads/force_run' }}
         with:
           context: .
           file: dockerfiles/${{ matrix.docker }}
@@ -69,7 +70,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       - uses: docker/build-push-action@v2
-        if: ${{ env.GIT_DIFF  }}
+        if: ${{ env.GIT_DIFF || github.ref == 'refs/heads/force_run' }}
         with:
           context: .
           file: dockerfiles/${{ matrix.context }}/Dockerfile
@@ -99,7 +100,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       - uses: docker/build-push-action@v2
-        if: ${{ env.GIT_DIFF  }}
+        if: ${{ env.GIT_DIFF || github.ref == 'refs/heads/force_run' }}
         with:
           context: .
           file: dockerfiles/${{ matrix.context }}/Dockerfile
