--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -9,6 +9,7 @@ RUN conda install -y ipython \
     && conda clean -a -y
 
 RUN pip install https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_gpu-2.8.0-cp37-cp37m-manylinux2010_x86_64.whl \
+    && pip install --upgrade tensorflow_hub \
     && pip cache purge
 
 RUN pip install onnxruntime-gpu==1.10 \
