--- a/dockerfiles/ml/Dockerfile
+++ b/dockerfiles/ml/Dockerfile
@@ -5,11 +5,16 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 RUN conda install -y ipython \
     numpy matplotlib pandas seaborn scipy scikit-learn \
-    && conda install -y pytorch torchvision torchaudio cudatoolkit=11.3 -c pytorch \
+    && conda clean -a -y
+
+RUN conda install -y pytorch torchvision torchaudio cudatoolkit=11.3 -c pytorch \
     && conda clean -a -y
 
 RUN pip install https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow_gpu-2.8.0-cp37-cp37m-manylinux2010_x86_64.whl \
     && pip install --upgrade tensorflow_hub \
+    && pip cache purge
+
+RUN pip install paddlepaddle-gpu==2.2.2.post112 -f https://www.paddlepaddle.org.cn/whl/linux/mkl/avx/stable.html \
     && pip cache purge
 
 RUN pip install onnxruntime-gpu==1.10 \
