--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,6 +85,8 @@ jobs:
           - vscode
     needs: [build]
     steps:
+      - run: |
+          curl -L https://raw.githubusercontent.com/apache/flink/master/tools/azure-pipelines/free_disk_space.sh | bash
       - uses: actions/checkout@v3
       - uses: technote-space/get-diff-action@v6
         with:
