--- a/dockerfiles/base/Dockerfile.cuda
+++ b/dockerfiles/base/Dockerfile.cuda
@@ -1,10 +1,4 @@
-ARG BASE_IMAGE=nvidia/cudagl:11.4.2-devel-ubuntu20.04
+ARG BASE_IMAGE=nvidia/cuda:11.4.2-cudnn8-devel-ubuntu20.04
 FROM ${BASE_IMAGE}
 
 ARG DEBIAN_FRONTEND=noninteractive
-
-RUN apt update \
-    && apt install -y --no-install-recommends libcudnn8=8.2.4.15-1+cuda11.4 libcudnn8-dev=8.2.4.15-1+cuda11.4 \
-    && apt-mark hold libcudnn8 \
-    && rm -rf /var/lib/apt/lists/*
-
