--- a/dockerfiles/development/Dockerfile
+++ b/dockerfiles/development/Dockerfile
@@ -8,7 +8,7 @@ RUN if [ ! `cat /etc/passwd | grep xundaoxd` ]; then useradd -m -s /bin/bash xun
 RUN apt update \
     && apt install -y autoconf automake libtool clang-format ninja-build ccache flex bison bison-doc info man-db manpages manpages-dev \
     && apt install -y gdb strace ltrace \
-    && apt install -y libgflags-dev libgtest-dev libprotobuf-dev protobuf-compiler \
+    && apt install -y libgoogle-glog-dev libgflags-dev libgtest-dev libprotobuf-dev protobuf-compiler \
     && apt install -y linux-generic-hwe-20.04 \
     && rm -rf /var/lib/apt/lists/*
 
